# prisoners-dilemma

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  env.py  experiments.ipynb  pyproject.toml  requirements.txt  utils.py
notebooks/: develop.ipynb  experiments.ipynb
prisoners_dilemma/: algorithms.py  env.py  utils.py
