[tool.poetry]
name = "prisoners-dilemma"
version = "0.1.0"
description = ""
authors = ["Daphne <daphn3cor@gmail.com>"]
readme = "README.md"
packages = [{include = "prisoners_dilemma"}]

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
pre-commit = "^3.0.4"
pylint = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
